# Kovalent

./: .gitignore  README.md  docker-compose.yml
backend/: .env.example  pyproject.toml  requirements.txt
backend/app/: __init__.py  config.py  correlation.py  main.py  models.py
backend/app/agents/: __init__.py  baseline.py  cpu.py  log_io.py  memory.py  network.py  restart.py  storage.py
backend/app/collectors/: __init__.py  flow_collector.py  kafka_producer.py  kubernetes_collector.py  log_pattern_collector.py  mock_collector.py  prometheus_collector.py
backend/app/services/: agent_bus.py  causal_engine.py  graph_service.py  incident_service.py  insight_service.py  kpi_buffer.py  live_graph.py  llm_client.py  memory_service.py  orchestrator.py  rca_service.py  streaming_pipeline.py
backend/tests/: test_agents.py  test_causal_engine.py  test_correlation.py  test_graph_service.py  test_incident_service.py  test_kubernetes_collector.py  test_live_collector.py  test_live_graph.py  test_log_patterns.py  test_new_agents.py  test_orchestrator.py  test_rca_service.py
demo/: cascading-failure.yaml  cpu-spike.yaml  crashloop.yaml  memory-leak.yaml  noisy-errors.yaml  pvc-stress.yaml
docs/: akhil_frontend_dashboard.md  surya_live_collectors.md  team_module_map.md  yashwanth_intelligence_rca.md
frontend/: Dockerfile  index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: index.css  main.jsx  styles.css
frontend/src/api/: client.js
frontend/src/components/: AppShell.jsx  ChatDrawer.jsx  EvidenceDrawer.jsx  Shared.jsx  TopologyGraph.jsx
(+2 files in other folders)
