[project]
name = "kovalent-backend"
version = "0.1.0"
description = "FastAPI backend for Kovalent pod intelligence."
requires-python = ">=3.11"
dependencies = [
  "fastapi==0.115.6",
  "uvicorn[standard]==0.34.0",
  "pydantic==2.10.5",
  "httpx==0.28.1",
  "networkx==3.4.2",
  "numpy>=1.26.0,<3",
  "redis==5.2.1",
  "google-generativeai==0.8.5",
]

[project.optional-dependencies]
dev = ["pytest==8.3.4"]
torch = ["torch>=2.2.0"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
